--- a/style/styles.css
+++ b/style/styles.css
@@ -77,7 +77,7 @@ body{
     height: 2rem;
     cursor: pointer;
     display: none;
-    margin-right: -2rem;
+    color: white;
 }
 
 input[type="checkbox"]{
@@ -86,14 +86,9 @@ input[type="checkbox"]{
 
 @media (max-width: 920px){
     .linksButtonHeader{
-        padding: 0 40px 0 50px;
-        justify-content: space-around;
-        flex-direction: column;
-        align-items: flex-end;
+        justify-content: flex-end;
     }
-}
 
-@media (max-width: 920px){
     .hamburgerButton{
         display: block;
         
@@ -222,10 +217,5 @@ footer{
         align-items: center;
     }
 }
-
-.loader{
-    color: red;
-}
-
 
 /*SPA Vanila JS*/
