--- a/style/home.css
+++ b/style/home.css
@@ -21,13 +21,19 @@
     padding: 0 2rem;
 }
 
-.cardsBlogContent li a{
+.aLinks{
     text-decoration: none;
     color: black;
     font-weight: bold;
 }
 
-.cardsBlogContent li a:hover{
+.aLinksDark{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+
+.aLinks:hover{
     text-decoration: underline;
 }
 
