--- a/style/buyCards.css
+++ b/style/buyCards.css
@@ -100,3 +100,27 @@
     border: none;
     border-radius: 4px;
 }
+
+.moreCardsContainer{
+    width: 45%;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 3rem;
+    justify-content: space-between;
+    margin-left: 48%;
+}
+
+.shoeMoreCards{
+    width: 8rem;
+    height: 2rem;
+    background-color: #306BB3;
+    color: white;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.totalPokemon{
+    color: #306BB3;
+}
