--- a/style/styles.css
+++ b/style/styles.css
@@ -14,10 +14,6 @@ body {
   min-height: 100%;
 }
 
-.darkStyles{
-  background-color: black;
-}
-
 .headerContainer {
   display: flex;
   width: 100%;
@@ -73,6 +69,8 @@ body {
   height: 2rem;
   color: #306bb3;
   cursor: pointer;
+  border: none;
+  border-radius: 8px;
 }
 
 .hamburgerButton {
