changing the dark background color

--- a/style/darkMode.css
+++ b/style/darkMode.css
@@ -1,9 +1,9 @@
 main{
-    background-color: black;
+    background-color: #1A202C;
 }
 
 .darkButton{
-    background-color: black;
+    background-color: #1A202C;
     color: white;
 }
 
